5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1723_2498.log
== TEST (2019-05-09 10:33:42) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pca= float(input("insira o percentual de crescimento populacional da cidade b: "))
a=0
c=0
b=nha/100
d=nhb/100
print(b,d)	
-- OUTPUT:
2501.5 5800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:04) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pca= float(input("insira o percentual de crescimento populacional da cidade b: "))
a=0
c=0
b=pca/100
d=pcb/100
print(b,d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d=pcb/100
NameError: name 'pcb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:25) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pcb= float(input("insira o percentual de crescimento populacional da cidade b: "))
a=0
c=0
b=pca/100
d=pcb/100
print(b,d)	
-- OUTPUT:
0.355 0.105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:38:10) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pcb= float(input("insira o percentual de crescimento populacional da cidade b: "))
ha=nha
hb=nhb
t=0
b=pca/100
d=pcb/100
while (nha<nhb):
	ha=ha+(ha*b)
	hb=hb+(hb*d)
	nha= float(input("insira a quantidade de habitantes da city A: "))
	nhb= float(input("insira a quantidade de habitantes da city B: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    nha= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:00) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pcb= float(input("insira o percentual de crescimento populacional da cidade b: "))
ha=nha
hb=nhb
t=0
b=pca/100
d=pcb/100
while (nha<nhb):
	ha=ha+(ha*b)
	hb=hb+(hb*d)
	t=t+1
	nha= float(input("insira a quantidade de habitantes da city A: "))
	nhb= float(input("insira a quantidade de habitantes da city B: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    nha= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:43) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pcb= float(input("insira o percentual de crescimento populacional da cidade b: "))
ha=nha
hb=nhb
t=0
b=pca/100
d=pcb/100
while (nha<nhb):
	ha=ha+(ha*b)
	hb=hb+(hb*d)
	t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    nha= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:03) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pcb= float(input("insira o percentual de crescimento populacional da cidade b: "))
ha=nha
hb=nhb
t=0
b=pca/100
d=pcb/100
while (ha<hb):
	ha=ha+(ha*b)
	hb=hb+(hb*d)
	t=t+1
print(t)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:41:17) 
-- CODE:
nha= float(input("insira a quantidade de habitantes da city A: "))
nhb= float(input("insira a quantidade de habitantes da city B: "))
pca= float(input("insira o percentual de crescimento populacional da cidade A: "))
pcb= float(input("insira o percentual de crescimento populacional da cidade b: "))
ha=nha
hb=nhb
t=0
b=pca/100
d=pcb/100
while (ha<hb):
	ha=ha+(ha*b)
	hb=hb+(hb*d)
	t=t+1
print(t)
-- EXECUTION TIME:
0.127769
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
